# rust-practice

./: README.md
advanced_functions/src/: main.rs
advanced_traits/src/: associated_types.rs  call_methods_same_name.rs
advanced_types/src/: dynamically_sized_types.rs  new_type.rs  typed_aliases.rs
cargo_advanced/create_and_cargo/: Cargo.toml
cargo_advanced/create_and_cargo/src/: lib.rs
cargo_advanced/workspace/adder/: Cargo.toml
closures/src/: lib.rs  main.rs
collections/src/: my_hashmap.rs  my_string.rs
controll/src/: main.rs
enums/src/: enum_advanced.rs  enum_match.rs  main.rs
errors/src/: main.rs
generics/src/: main.rs  my_generics.rs  my_lifetime.rs  my_trait_two.rs  struct_generics.rs
guessing_game/src/: main.rs
iterators/src/: iterator.rs  lib.rs
lets_get_rusty/controll/: Cargo.toml
lets_get_rusty/macros/: Cargo.toml
lets_get_rusty/macros/function_like_macro/: Cargo.toml
lets_get_rusty/macros/hello_macro/hello_macro_derive/src/: lib.rs
lets_get_rusty/macros/src/: declarative_macros.rs  function_like_macro.rs  main.rs
macros/route_attribute_macro/: Cargo.toml
macros/src/: attribute_like_macros.rs  lib.rs  procedural_macros.rs
ownership/src/: main.rs
pattern_matching/src/: match_guard.rs  pattern_syntax.rs
project_server/: 404.html  Cargo.toml  README.md  index.html
project_server/src/: lib.rs  main.rs
smart_pointer/src/: box_pointer.rs  custom_pointer_drop.rs  main.rs  ref_counting.rs
structure/src/: main.rs
unsafe_rust/src/: mut_static_and_trait.rs
variables_and_type/src/: data_type.rs  main.rs
(+48 files in other folders)
