[package]
name = "art"
version = "0.1.0"
authors = ["noormohammedb"]
edition = "2021"
description = "Learning Create and Cargo"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3